--- a/index.css
+++ b/index.css
@@ -108,7 +108,9 @@ span {
   }
 }
 /* Neuromophism */
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -116,13 +118,15 @@ span {
 }
 /* Generic */
 
-
 /**/
-.parent{
-  align-items: center;display: flex;justify-content: center;
+.parent {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin: 2rem;
 }
 .main-1 {
-  position:sticky;
+  position: sticky;
   width: 1000px;
   height: 600px;
   min-width: 1000px;
@@ -131,27 +135,26 @@ span {
   background-color: #ecf0f3;
   border-radius: 12px;
   overflow: hidden;
-  
 }
 @media (max-width: 1200px) {
   .main-1 {
     transform: scale(0.7);
- }
+  }
 }
 @media (max-width: 1000px) {
   .main-1 {
     transform: scale(0.6);
- }
+  }
 }
 @media (max-width: 800px) {
   .main-1 {
     transform: scale(0.5);
- }
+  }
 }
 @media (max-width: 600px) {
   .main-1 {
     transform: scale(0.4);
- }
+  }
 }
 .container {
   display: flex;
@@ -195,7 +198,7 @@ span {
   letter-spacing: 0.15px;
   border: none;
   outline: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #ecf0f3;
   transition: 0.25s ease;
   border-radius: 8px;
@@ -301,7 +304,8 @@ span {
   transform: scale(0.985);
   transition: 0.25s;
 }
-.switch__button:active, .switch__button:focus {
+.switch__button:active,
+.switch__button:focus {
   box-shadow: 2px 2px 6px #d1d9e6, -2px -2px 6px #f9f9f9;
   transform: scale(0.97);
   transition: 0.25s;
@@ -331,10 +335,13 @@ span {
   animation: is-gx 1.25s;
 }
 @keyframes is-gx {
-  0%, 10%, 100% {
+  0%,
+  10%,
+  100% {
     width: 400px;
- }
-  30%, 50% {
+  }
+  30%,
+  50% {
     width: 500px;
- }
+  }
 }
