--- a/index.css
+++ b/index.css
@@ -2,13 +2,13 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Gotham", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 12px;
   margin: 0;
   color: #a0a5a8;
 }
 a {
-  font-family: "Gotham", sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 span {
   margin: 1rem;
@@ -18,7 +18,8 @@ span {
   margin: 0;
   display: flex;
   align-items: center;
-  font-family: "Gotham Black", sans-serif;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
 }
 .title-inner {
   flex-grow: 1;
@@ -198,7 +199,7 @@ span {
   letter-spacing: 0.15px;
   border: none;
   outline: none;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Raleway', sans-serif;
   background-color: #ecf0f3;
   transition: 0.25s ease;
   border-radius: 8px;
@@ -243,6 +244,7 @@ span {
   box-shadow: 8px 8px 16px #d1d9e6, -8px -8px 16px #f9f9f9;
   border: none;
   outline: none;
+  font-family: 'Raleway', sans-serif;
 }
 /**/
 .a-container {
