--- a/index.css
+++ b/index.css
@@ -18,8 +18,9 @@ span {
   margin: 0;
   display: flex;
   align-items: center;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
+  font-family: 'Antonio', sans-serif;
+  font-weight: 700;
+  letter-spacing: -1px;
 }
 .title-inner {
   flex-grow: 1;
@@ -178,6 +179,7 @@ span {
   width: 100%;
   height: 100%;
 }
+
 .form__icon {
   object-fit: contain;
   width: 30px;
